<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mieSoRed" tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:padding="@dimen/padding_default" android:elevation="@dimen/card_elevation" android:layout_marginTop="@dimen/margin_large" android:layout_marginBottom="@dimen/margin_large" tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/logo_size" android:layout_height="@dimen/logo_size" android:layout_marginTop="@dimen/margin_large" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/miesologo"
            android:contentDescription="@string/miesoo_logo" /> <TextView
        android:id="@+id/textViewMieSo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miesoo"
        android:textSize="@dimen/text_size_extra_large" android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_default" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo" />

        <TextView
            android:id="@+id/textViewSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mie_bakso_terenak_di_kota" android:textColor="@color/dark_gray" android:textSize="@dimen/text_size_medium" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.353" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_atau_no_hp" android:layout_marginTop="@dimen/margin_large" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSubText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/kata_sandi" android:layout_marginTop="@dimen/padding_default" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonMasuk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/masuk" android:textColor="@android:color/white"
            android:backgroundTint="@color/mieSoRed" android:layout_marginTop="@dimen/margin_large" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

        <TextView
            android:id="@+id/textViewDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun_daftar_di_sini" android:textColor="@color/mieSoRed" android:layout_marginTop="@dimen/padding_default" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonMasuk" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>